// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zeus compiler jsx transform > compiles component usage 1`] = `
"import { marker as _marker, insert as _insert, bindText as _bindText, createComponent as _createComponent, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<h1><!></h1>\`);
function MyComponent(props: {
  title: string;
}) {
  return (() => {
    const _el$ = _tmpl$().firstChild;
    const _marker$ = _marker(_el$, 0);
    const _text$ = document.createTextNode("");
    _insert(_el$, _text$, _marker$);
    _bindText(_text$, () => props.title);
    return _el$;
  })();
}
const App = () => _createComponent(MyComponent, {
  title: "hello"
});"
`;

exports[`zeus compiler jsx transform > compiles dynamic child before static element 1`] = `
"import { child as _child, marker as _marker, insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><!><span></span></div>\`);
const App = (props: {
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _el$2 = _child(_el$, 1);
  const _marker$ = _marker(_el$, 0);
  const _text$ = document.createTextNode("");
  _insert(_el$, _text$, _marker$);
  _bindText(_text$, () => props.name);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > compiles dynamic text child 1`] = `
"import { marker as _marker, insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><!></div>\`);
const App = (props: {
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _marker$ = _marker(_el$, 0);
  const _text$ = document.createTextNode("");
  _insert(_el$, _text$, _marker$);
  _bindText(_text$, () => props.name);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > compiles element ref with callback 1`] = `
"import { bindRef as _bindRef, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div></div>\`);
const App = () => {
  const onMount = (el: HTMLDivElement) => {
    console.log(el);
  };
  return (() => {
    const _el$ = _tmpl$().firstChild;
    _bindRef(_el$, onMount);
    return _el$;
  })();
};"
`;

exports[`zeus compiler jsx transform > compiles element ref with object current 1`] = `
"import { bindRef as _bindRef, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div></div>\`);
const App = () => {
  const el = {
    current: null as HTMLDivElement | null
  };
  return (() => {
    const _el$ = _tmpl$().firstChild;
    _bindRef(_el$, el);
    return _el$;
  })();
};"
`;

exports[`zeus compiler jsx transform > compiles element ref with state 1`] = `
"import { bindRef as _bindRef, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<input>\`);
const App = () => {
  const input = state<HTMLInputElement | null>(null);
  return (() => {
    const _el$ = _tmpl$().firstChild;
    _bindRef(_el$, input);
    return _el$;
  })();
};"
`;

exports[`zeus compiler jsx transform > compiles multiple dynamic children before static element 1`] = `
"import { child as _child, marker as _marker, insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><!><!><span></span></div>\`);
const App = (props: {
  first: string;
  second: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _el$2 = _child(_el$, 2);
  const _marker$ = _marker(_el$, 0);
  const _text$ = document.createTextNode("");
  _insert(_el$, _text$, _marker$);
  _bindText(_text$, () => props.first);
  const _marker$2 = _marker(_el$, 1);
  const _text$2 = document.createTextNode("");
  _insert(_el$, _text$2, _marker$2);
  _bindText(_text$2, () => props.second);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > compiles nested component usage 1`] = `
"import { marker as _marker, insert as _insert, bindText as _bindText, mountShow as _mountShow, createComponent as _createComponent, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div className="component"><h1><!></h1><!></div>\`),
  _tmpl$2 = /*#__PURE__*/_template(\`<span>Count:<!></span>\`),
  _tmpl$3 = /*#__PURE__*/_template(\`<div><!><!></div>\`);
import { Show } from '@zeus-js/runtime-dom';
interface Props {
  title: string;
  count?: number;
}
export function MyComponent(props: Props) {
  return (() => {
    const _el$ = _tmpl$().firstChild;
    const _el$2 = _el$.firstChild;
    const _marker$ = _marker(_el$2, 0);
    const _text$ = document.createTextNode("");
    _insert(_el$2, _text$, _marker$);
    _bindText(_text$, () => props.title);
    const _show$ = _marker(_el$, 0);
    _mountShow(_el$, _show$, () => props.count !== undefined, () => (() => {
      const _el$3 = _tmpl$2().firstChild;
      const _marker$2 = _marker(_el$3, 0);
      const _text$2 = document.createTextNode("");
      _insert(_el$3, _text$2, _marker$2);
      _bindText(_text$2, () => props.count);
      return _el$3;
    })(), undefined);
    return _el$;
  })();
}
export function ParentComponent() {
  return (() => {
    const _el$4 = _tmpl$3().firstChild;
    const _marker$3 = _marker(_el$4, 0);
    _insert(_el$4, _createComponent(MyComponent, {
      title: "Hello"
    }), _marker$3);
    const _marker$4 = _marker(_el$4, 1);
    _insert(_el$4, _createComponent(MyComponent, {
      title: "World",
      count: 5
    }), _marker$4);
    return _el$4;
  })();
}"
`;

exports[`zeus compiler jsx transform > compiles static element 1`] = `
"import { template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div>hello</div>\`);
const App = () => _tmpl$().firstChild;"
`;

exports[`zeus compiler jsx transform > compiles static element before dynamic child 1`] = `
"import { marker as _marker, insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><span></span><!></div>\`);
const App = (props: {
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _el$2 = _el$.firstChild;
  const _marker$ = _marker(_el$, 0);
  const _text$ = document.createTextNode("");
  _insert(_el$, _text$, _marker$);
  _bindText(_text$, () => props.name);
  return _el$;
})();"
`;

exports[`zeus compiler jsx transform > compiles static elements around dynamic child 1`] = `
"import { child as _child, marker as _marker, insert as _insert, bindText as _bindText, template as _template } from "@zeus-js/runtime-dom";
var _tmpl$ = /*#__PURE__*/_template(\`<div><span></span><!><b></b></div>\`);
const App = (props: {
  name: string;
}) => (() => {
  const _el$ = _tmpl$().firstChild;
  const _el$2 = _el$.firstChild;
  const _el$3 = _child(_el$, 2);
  const _marker$ = _marker(_el$, 0);
  const _text$ = document.createTextNode("");
  _insert(_el$, _text$, _marker$);
  _bindText(_text$, () => props.name);
  return _el$;
})();"
`;
